# nl2sql

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  debug_output.txt  debug_sql_generation.py  docker-compose.yml  initial-plan.md  nl2sql-agent.bundle  pyproject.toml  reproduce_db_dtypes.py  test_newline_escape.py  validate_sql_syntax.py  validate_yaml_examples.py  verify_db_dtypes.py  verify_fix.py
.github/workflows/: ci.yml
architect/: architecture.md  cross-cutting.md  dependency-graph.md  execution-sequence.md  interfaces.md
catalog/: AGENTS.md  README.md  __init__.py  _exchanges.yaml  _routing.yaml  glossary.yaml  schema.py
catalog/arb_data/: _dataset.yaml  algostartup.yaml  brokertrade_2.yaml  brokertrade_data.yaml  clicktrade.yaml  eodpostradessnap.yaml  instrumentreceival.yaml  instruments.yaml  livestats.yaml  mako_underlyingtrade.yaml  marketdata.yaml  marketdata_trades.yaml  marketdepth.yaml  marketdepth_snapshot.yaml  markettrade.yaml  norm_strike_voldata.yaml  posdata.yaml  quoterdelete.yaml  quotertrade.yaml  quoterupdate.yaml  streammetadatamessage.yaml  theodata.yaml  theodata_snapshot.yaml  tradedata.yaml
catalog/asx_data/: _dataset.yaml  algostartup.yaml  clicktrade.yaml  eodpostradessnap.yaml  instrumentreceival.yaml  instruments.yaml  posdata.yaml  (+20 more)
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
data/: symbol_exchange_map.csv
docs/: ARCHITECTURE_REPORT.md  ENVIRONMENT_SETUP.md  GETTING_STARTED.md  HOW_IT_ALL_WORKS.md  NL2SQL_Agent_Overview.md
eval/: AGENTS.md  __init__.py  gold_queries.yaml  run_eval.py  validate_gold_set.py
examples/: AGENTS.md  data_examples.yaml  kpi_examples.yaml  routing_examples.yaml
metadata/: ROUTING.md  data_loader_transforms.yaml  field_lineage.yaml  kpi_computations.yaml  proto_fields.yaml
nl2sql_agent/: .env  .env.dev  .env.example  AGENTS.md  __init__.py  agent.py  callbacks.py  catalog_loader.py  clients.py  config.py  logging_config.py  mcp_server.py  prompts.py  protocols.py  serialization.py  sql_guard.py  types.py
scripts/: AGENTS.md  check_coverage.py  enrich_aggregation.py  enrich_categories.py  enrich_descriptions.py  enrich_formulas.py  enrich_related.py  enrich_source.py  generate_skeleton.py  migrate_autonomous_embeddings.sql  onboard_table.py  populate_embeddings.py  populate_glossary.py  port_omx_metadata.py  profile_columns.py  run_embeddings.py  start_litellm.sh  start_local.sh  table_registry.py  validate_catalog.py  validate_schemas.py  write_descriptions.py
setup/: 01_create_datasets.sql  02_table_inventory.sql  03_verify_data.sql  AGENTS.md  extract_schemas.py  raw_sql_init.sql
tests/: AGENTS.md  conftest.py  fakes.py  test_agent_init.py  test_cache_exchange.py  test_callbacks.py  test_catalog_loader.py  test_catalog_schema.py  test_catalog_validation.py  test_check_coverage.py  test_circuit_breaker.py  test_clients.py  test_column_search.py  test_combined_vector_search.py  test_config.py  test_description_verification.py  test_embedding_pipeline.py  test_enrich_aggregation.py  test_enrich_categories.py  test_enrich_formulas.py  test_enrich_related.py  test_enrich_source.py  test_eval_runner.py  test_example_column_validation.py  test_exchange_resolver.py  test_field_lineage.py  test_generate_skeleton.py  test_learning_loop.py  test_mcp_server.py  test_metadata_indexes.py  test_metadata_loader.py  test_onboard_table.py  test_populate_embeddings.py  test_populate_glossary.py  test_profile_columns.py  test_prompts.py  test_protocols.py  test_repetition_detection.py  test_routing_consistency.py  test_routing_logic.py  (+13 more)
(+423 files in other folders)
